added a bunch of docker/helm related things

--- a/crypto-buyer/files/buyer-config.yml
+++ b/crypto-buyer/files/buyer-config.yml
@@ -1,6 +1,6 @@
 {{- with .Values -}}
 queue:
-  name: {{ .scrapers.binance.configs.queue.name }}
+  name: {{ .queue.name }}
   host: {{ .queue.host }}
   port: {{ .queue.port }}
   vhost: {{ .queue.vhost }}
